force-app/main/default/objects/NCSP_Case_Billtrust_Conga_Event__e/NCSP_Case_Billtrust_Conga_Event__e.object-meta.xml
<CustomObject>
    <label>NCSP_Case_Billtrust_Conga_Event</label>
    <pluralLabel>NCSP_Case_Billtrust_Conga_Event</pluralLabel>
</CustomObject>