force-app/main/default/objects/NCSP_Case_Billtrust_Conga_Event__e/fields/Autopay_Required__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Required__c</fullName>
    <description>Indicates whether autopay is required for the Billtrust account. This field determines if the integration should trigger a form request to the Conga system.</description>
    <label>Autopay_Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>