force-app/main/default/objects/NCSP_Case_Billtrust_Conga_Event__e/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description>The email address of the billing contact for the Billtrust account. This field is used to set up the user in the Billtrust system.</description>
    <label>Billing_Contact_Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>