force-app/main/default/objects/NCSP_Case_Billtrust_Conga_Event__e/fields/Billing_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Last_Name__c</fullName>
    <description>The last name of the billing contact for the Billtrust account. This field is used to set up the user in the Billtrust system.</description>
    <label>Billing_Contact_Last_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>