force-app/main/default/objects/NCSP_Case_Billtrust_Conga_Event__e/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>The country of the billing contact. (Either USA or Canada)</description>
    <label>Billing_Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>