force-app/main/default/objects/NCSP_Case_Billtrust_Conga_Event__e/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <description>The account number of the customer in the Billtrust system. This field helps in associating the billing contact and account details with the correct customer. With this number, the customer will be created in the Billtrust system.</description>
    <label>Customer_Account</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>